[project]
name = "autoscaler"
version = "0.1.0"
description = "GitHub Actions Runner Autoscaler for DigitalOcean App Platform"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
